# PlantTracker

./: .clang-format  .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md
.devcontainer/: Dockerfile  devcontainer.json
PlantTracker/: build.gradle  settings.gradle
PlantTracker/app/: build.gradle
PlantTracker/app/src/androidTest/java/ca/planttracker/: ExampleInstrumentedTest.java
PlantTracker/app/src/main/: AndroidManifest.xml
PlantTracker/app/src/main/java/ca/planttracker/: MainActivity.java
PlantTracker/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
PlantTracker/app/src/main/res/values-night/: themes.xml
PlantTracker/app/src/test/java/ca/planttracker/: ExampleUnitTest.java
android/plant_tracker/: build.gradle  gradle.properties  settings.gradle
android/plant_tracker/app/: build.gradle
android/plant_tracker/app/src/main/: AndroidManifest.xml
android/plant_tracker/app/src/main/assets/: plants.json
android/plant_tracker/app/src/main/java/ca/planttracker/: AddPlantActivity.java  AppBarActivity.java  BarGraph.java  Client.java  FirebaseGlideModule.java  GraphBase.java  LineGraph.java  MainActivity.java  MoistureDevice.java  Pi.java  Plant.java  PlantActivity.java  PlantListAdapter.java  Settings.java  SettingsActivity.java  ViewPlants.java  ViewPlantsActivity.java
android/plant_tracker/app/src/main/res/color/: button_background_colour.xml
android/plant_tracker/app/src/main/res/drawable/: back_arrow_24.xml  backarrow_48.xml  baseline_add_24.xml  baseline_add_48.xml  baseline_file_upload_24.xml  baseline_flower_24.xml  baseline_sentiment_dissatisfied_24.xml  baseline_sentiment_neutral_24.xml  baseline_sentiment_satisfied_24.xml  baseline_settings_24.xml  baseline_sunny_24.xml  baseline_water_drop_24.xml  more_options_vert.xml  outline_sentiment_excited_24.xml
android/plant_tracker/app/src/main/res/layout/: activity_add_plant.xml  activity_main.xml  add_plant_activity.xml  custom_appbar.xml  custom_toolbar.xml  dropdown_item.xml  navigation_header.xml  plant_activity.xml  plant_card.xml  plants_listview_layout.xml  settings_activity.xml  view_plants.xml  view_plants_activity.xml  view_plants_card.xml
android/plant_tracker/app/src/main/res/menu/: navigation_menu.xml  plant_menu.xml  view_plants_menu.xml
android/plant_tracker/app/src/main/res/values/: attrs.xml  colors.xml  strings.xml  styles.xml  themes.xml
android/plant_tracker/app/src/main/res/values-night/: themes.xml
android/plant_tracker/app/src/main/res/xml/: preference.xml
android/plant_tracker/gradle/wrapper/: gradle-wrapper.properties
case_models/: base.blend  base.blend1  lid.blend  lid.blend1
deployment/: plantlistener.service
deployment/docker/: Dockerfile  compose.yml  docker_config.json
idl/: CMakeLists.txt  planttracker.proto
plant_listener/: CMakeLists.txt  README.md
plant_listener/client/: CMakeLists.txt
plant_listener/client/src/: Idea.md  command_line.cpp  command_line.hpp  config.hpp  main.cpp  plant_listener.hpp  plant_listener_config.hpp
plant_listener/core/: CMakeLists.txt
plant_listener/core/include/plantlistener/: plant_listener.hpp  plant_listener_config.hpp
plant_listener/core/include/plantlistener/device/: device_loader.hpp
plant_listener/core/include/plantlistener/plant/: plant.hpp  plant_config.hpp
plant_listener/core/include/plantlistener/sensor/: humidity_sensor.hpp  light_sensor.hpp  moisture_sensor.hpp  sensor.hpp  sensor_config.hpp  sensor_loader.hpp  temp_sensor.hpp
plant_listener/core/src/: device_loader.cpp  plant_listener.cpp  plant_listener_config.cpp  sensor.cpp  sensor_config.cpp
plant_listener/data/: config.json  server_config.json  test_config.json
plant_listener/device/: CMakeLists.txt
plant_listener/device/include/plantlistener/device/: device.hpp  device_loader.hpp
plant_listener/device/mock/: CMakeLists.txt  mock_device.hpp
plant_listener/device/src/: device.cpp  device_loader.cpp
plant_listener/devices/: CMakeLists.txt
plant_listener/devices/ADS7830/: CMakeLists.txt  device_ads7830.cpp  device_ads7830.hpp  main.cpp
plant_listener/devices/ADS7830/lib/: CMakeLists.txt  ads7830.cpp  ads7830.hpp
plant_listener/devices/dht22/: CMakeLists.txt  device_dht22.cpp  device_dht22.hpp  dht22-main.c
plant_listener/devices/dht22/lib/: CMakeLists.txt  dht22.c  dht22.h
plant_listener/devices/include/plantlistener/device/: device.hpp  device_config.hpp
plant_listener/devices/mock/: CMakeLists.txt  mock_device.cpp  mock_device.hpp
plant_listener/devices/src/: device.cpp  device_config.cpp
plant_listener/sensor/: CMakeLists.txt
plant_listener/sensor/include/plantlistener/sensor/: light_sensor.hpp  moisture_sensor.hpp  sensor.hpp
plant_listener/sensor/src/: sensor.cpp
plant_listener/test/: CMakeLists.txt  example_test.cpp
plant_listener/test/client/: CMakeLists.txt  test_command_line.cpp
plant_listener/test/common/: CMakeLists.txt
plant_listener/test/common/include/: temp_dir.hpp
plant_listener/test/common/src/: temp_dir.cpp
plant_listener/test/core/: CMakeLists.txt  test_plantListener.cpp  test_plantlistener.cpp  test_plantlistener_config.cpp
plant_listener/test/live/: CMakeLists.txt  live_test.cpp
plant_listener/test/live/server/: CMakeLists.txt
plant_listener/test/live/server/include/plantlistener/test/: test_plant_server.hpp
plant_listener/test/live/server/src/: main.cpp  test_plant_server.cpp
plant_listener/test/util/: CMakeLists.txt  ld_loader_lib.c  test_error.cpp  test_expected.cpp  test_ld_loader.cpp
plant_listener/util/: CMakeLists.txt
plant_listener/util/include/plantlistener/: LdLoader.hpp  error.hpp  expected.hpp  ld_loader.hpp
plant_listener/util/src/: error.cpp
server/: settings.gradle
server/app/: build.gradle
server/app/src/main/java/planttracker/server/: App.java  Database.java  Messaging.java  PlantListenerServer.java  PlantTrackerConfig.java  PlantTrackerServer.java
server/app/src/main/resources/: config.json  delete_test_data.sql  init.sql  insert_test_data.sql
server/app/src/test/java/planttracker/server/: AppTest.java
(+3 files in other folders)
